cabal-version:      3.0
name:               monotone-chain-haskell
version:            0.1.0.0
synopsis:
    Haskell implementation of the monotone chain convex hull solver.

-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             monde-lointain
maintainer:         hunterw297@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-flags
    ghc-options: -Wall -g

executable monotone-chain-debug
    import:           common-flags
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                      , binary ^>= 0.8.9.1
                      , bytestring ^>= 0.11.5.3
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O0

executable monotone-chain-release
    import:           common-flags
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                      , binary ^>= 0.8.9.1
                      , bytestring ^>= 0.11.5.3
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2

executable pointgen-debug
    import:           common-flags
    main-is:          Pointgen.hs
    build-depends:    base ^>=4.17.2.1
                      , binary ^>= 0.8.9.1
                      , bytestring ^>= 0.11.5.3
                      , random ^>= 1.2.1.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O0

executable pointgen-release
    import:           common-flags
    main-is:          Pointgen.hs
    build-depends:    base ^>=4.17.2.1
                      , binary ^>= 0.8.9.1
                      , bytestring ^>= 0.11.5.3
                      , random ^>= 1.2.1.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2
